JENKINS/jenkins-ecs-deployment/app2-nginx-flask-mysql-pipeline/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: app1.avej.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proxy
                port:
                  number: 80
